<resources>

    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <!-- Pantalla login-->
    <string name="app_name">GymInnXML</string>
    <string name="nameLogin">GimmInn</string>
    <string name="login">Login</string>
    <string name="registerLogin">Register</string>
    <string name="remember">Remember me</string>
    <string name="userLogin">User</string>
    <string name="passwordLogin" >Password</string>
    <string name="imageViewLogin">Image</string>
    <!-- Pantalla registro-->
    <string name="EditTextNameRegister">Name</string>
    <string name="EditTextSurnameRegister">Surname</string>
    <string name="EditTextEmailRegister">Email</string>
    <string name="EditTextBirthDayRegister">Date of Birth</string>
    <string name="EditTextUserRegister">User</string>
    <string name="EditTextPasswordRegister">Password</string>
    <string name="LogoImageRegister">TODO</string>
    <string name="RegisterTitle">REGISTER</string>
    <string name="RegisterButton">Register</string>
    <string name="TextReturnRegister">Return </string>
    <string name="checkboxTrainerRegister">Trainer</string>
    <string name="imageViewRegister">Image</string>

    <!-- Pantalla WorkOuts  -->
    <string name="textNameWorkOuts">WORKOUT</string>
    <string name="imageViewWorkouts">Image</string>
    <string name="imageviewWorkouts2">TODO</string>
    <string name="btnReturnWorkouts">Return</string>
    <string name="levelsWorkout">Filter by levels</string>
    <string name="filterWorkout">Filter</string>
    <string name="trainerWorkout">Trainer</string>
    <string name="UserLevelWorkout">User level</string>
    <string name="buttonReproduceWorkout">Reproduce</string>
    <string name="textWorkout">Workout</string>

    <!-- Pantalla Perfil  -->
    <string name="btnReturnProfile">Return</string>
    <string name="ImageThemeChangeProfile">TODO</string>
    <string name="imageLanguageChangeProfile">TODO</string>
    <string name="EditTextBirthDayProfile">Date of Birth</string>
    <string name="emailProfile">Email</string>
    <string name="userProfile">User</string>
    <string name="surnameProfile">Surname</string>
    <string name="nameProfile">Name</string>


    <!-- Pantalla Entrenador  -->
    <string name="imageLogoTrainer">TODO</string>
    <string name="txtTrainer">Trainer</string>
    <string name="editTextTrainer">Filter by levels</string>
    <string name="buttonFilterTrainer">Filter</string>
    <string name="buttonAddTrainer">Add</string>
    <string name="buttonEditTrainer">Modify</string>
    <string name="buttonDeleteTrainer">Delete</string>
    <string name="buttonReturnTrainer">Back</string>



</resources>